[package]
name = "l1npengtul-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3"
tree-sitter-highlight = "0.20"
handlebars = "4.3"
toml = "0.5"
seahash = "4.1"
ignore = "0.4"
tantivy = "0.18"
color-eyre = "0.6"
git2 = "0.15"
minify-html = "0.10"
serde_json = "1.0"
html_editor = "0.5"
bytes = "1.2"
pathdiff = "0.2"
rayon = "1.5"
itertools = "0.10"
lightningcss = "1.0.0-alpha.33"
minify-js = "0.1"
wasmtime = "1.0.0"
wasmtime-wasi = "1.0.0"
tokio-rayon = "2.1"

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.axum]
version = "0.6.0-rc.1"
features = ["http2"]

[dependencies.sea-orm]
version = "0.9"
features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "with-json", "with-chrono"]

[dependencies.moka]
version = "0.9"
features = ["future"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rsass]
version = "0.26.0"

[dependencies.pulldown-cmark]
version = "0.9"
features = ["serde", "simd", "getopts"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
