[package]
name = "gumilgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
tree-sitter-highlight = "0.20.1"
toml = "0.5.9"
seahash = "4.1.0"
ignore = "0.4.18"
tantivy = "0.18.1"
color-eyre = "0.6.2"
git2 = "0.15.0"
minify-html = "0.10.3"
serde_json = "1.0.89"
html_editor = "0.5.2"
bytes = "1.2.1"
pathdiff = "0.2.1"
rayon = "1.5.3"
itertools = "0.10.5"
lightningcss = "1.0.0-alpha.38"
minify-js = "0.4.0"
wasmtime = "3.0.1"
wasmtime-wasi = "3.0.1"
tokio-rayon = "2.1.0"
tera = "1.17.1"
markdown-toc = "0.2.0"
syntect = "5.0.0"
semver = "1.0.14"
oxipng = "7.0.0"
memmap2 = "0.5.8"
base64 = "0.20.0"
lol_html = "0.3.2"
dashmap = "5.4.0"
url = "2.3.1"

[dependencies.tokio]
version = "1.23.0"
features = ["full"]

[dependencies.axum]
version = "0.6.1"
features = ["http2"]

[dependencies.sea-orm]
version = "0.10.5"
features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "with-json", "with-chrono"]

[dependencies.moka]
version = "0.9.6"
features = ["future"]

[dependencies.serde]
version = "1.0.148"
features = ["derive"]

[dependencies.rsass]
version = "0.26.0"

[dependencies.pulldown-cmark]
version = "0.9.2"
features = ["serde", "simd", "getopts"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.rhai]
version = "1.11.0"
features = ["sync"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
